--- a/demo/index.html
+++ b/demo/index.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="utf-8">
   <style>
+    html {
+      font-size: 10px;
+    }
+
     body {
       background: #fafafa;
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
     }
   </style>
 </head>
@@ -13,14 +20,11 @@
 
   <script type="module">
     import { html, render } from 'lit-html';
-    import '../dist/shared-resize-observer.js';
+        import '../dist/demo/app-root.js';
 
-    const title = 'Hello owc World!';
     render(
       html`
-        <shared-resize-observer .title=${title}>
-          some more light-dom
-        </shared-resize-observer>
+        <app-root></app-root>
       `,
       document.querySelector('#demo')
     );
